# payroll-agent

./: .gitignore  README.md  README_CLIENT_SERVER.md  pyproject.toml  run_app.py  run_client_server.py  sample_timesheet.txt  sample_timesheet_form.txt  sample_work_hours.csv  sample_work_hours.txt  streamlit_app.py  test_3_agent_system.py  test_api_key.py  test_dark_theme.py  test_debug.py  test_document_workflow.py
.streamlit/: config.toml
backend/: main.py  requirements.txt
frontend/: requirements.txt  streamlit_app.py
src/react_agent/: configuration.py  graph.py  graph.py.bak  prompts.py  state.py  tools.py  utils.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
